fixed navbar covering content

--- a/main.css
+++ b/main.css
@@ -1,7 +1,10 @@
+html {
+  scroll-behavior: smooth;
+}
+
 body {
     margin: 0;
     font-family: Arial, sans-serif;
-    scroll-behavior: smooth;
   }
   
   svg {
@@ -18,9 +21,19 @@ body {
     justify-content: center;
     margin-bottom: 2em;
   }
+
+  /*.scroll-container{
+    overflow: scroll;
+    height: 120vh;
+    scroll-snap-type: y mandatory;
+
+ }*/
   
   section {
     padding: 2em 4em;
+    /*scroll-snap-align: start;
+    scroll-padding-top: 110px;
+    scroll-snap-stop: always;*/
   }
   
   #header {
@@ -82,6 +95,7 @@ body {
     margin: 0 20px;
     
   }
+  
     
   #hummingbird{
     display: block;
@@ -159,16 +173,16 @@ body {
   #submit {
     
     display: block;
+    box-sizing: border-box;
     font-size: 1.5em;
     font-family: "Trebuchet MS", sans-serif;
     margin-top: 5px;
     background-color: #1F84EF;
-    border: solid 3px darkGray;
+    border: 3px solid darkGray;
     border-radius: 10px;
     color: white;
     height: 2em;
     width: min-content;
-    border-width: 3px;
     transition: color 0.75s, background-color 0.75s, border 0.75s;
     
   }
@@ -177,7 +191,7 @@ body {
     cursor: pointer;
     color: #FFD200;
     background-color: #1640d9;
-    border: solid 3px black;
+    border: 3px solid black;
   }
   
   
@@ -243,3 +257,16 @@ body {
     }
     
   }
+
+  /*Prevents fixed navbar from covering content when clicking nav links*/
+  @media only screen and (min-width: 601px){
+
+  #our-story::before, #products::before, #contact-us::before {
+    display: block; 
+    content: " "; 
+    margin-top: -125px; 
+    height: 125px; 
+    visibility: hidden; 
+    pointer-events: none;
+    }
+  } 
